plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}


dependencies {
    // Core dependencies
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // The codebase currently uses javax.annotation.PostConstruct
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'org.json:json:20231013'  // Vous pouvez utiliser une version plus récente si disponible

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring Framework 6.2 / Spring Boot 3.5 compatible generation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

    // Logging
    // Spring Boot provides logging (Logback + slf4j) via starters; no direct slf4j-api needed

    implementation 'org.webjars:redoc:2.0.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootRun') {
    environment 'SPRING_PROFILES_ACTIVE', System.getenv('SPRING_PROFILES_ACTIVE') ?: 'local'
}

tasks.named('processResources') {
    def dotenvFile = layout.projectDirectory.file('.env')

    doFirst {
        if (!dotenvFile.asFile.isFile()) {
            throw new GradleException('.env est requis pour construire le JAR avec ses secrets embarqués')
        }
    }

    from(dotenvFile) {
        rename { 'application-packaged-secrets.properties' }
    }
}
